--- a/Documents/Full Stack Dev/Web/Code/Final/Proyecto Desarrollo Web/pages/cotizaciones.html
+++ b/Documents/Full Stack Dev/Web/Code/Final/Proyecto Desarrollo Web/pages/cotizaciones.html
@@ -1,142 +1,233 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Digitalhikeup | Bienvenido a la transformacion digital</title>
-    <link rel="Digitalhikeup Icon" href="./img/Logo.jpg" type="image/x-icon">
-</head>
-<body>
-    <!--Imagen principal, por arriba de esta figuraran toda el resto del body-->
-    <img src="../img/Desktop.png" alt="Digitalhikeup imagen principal"/>
-<!--La idea de esta lista es que figuren de manera horizontal-->
-    <header class="menu">
-        <nav class="navegacion">
-            <ul class="opciones">
-                <a href="../index.html"><li class="opciones_lista">Inicio</li></a>
-                <a href="acerca_de_nosotros.html"><li class="opciones_lista">Acerca de nosotros</li></a>
-                <a href="productos.html"><li class="opciones_lista">Productos</li></a>
-                <a href="cotizaciones.html"><li class="opciones_lista">Cotizaciones</li></a>
-                <a href="ayuda.html"><li class="opciones_lista">Ayuda</li></a>
-                <a href="contactanos.html"><li class="opciones_lista">Contactanos</li></a>
-             </ul>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <title>Digitalhikeup | Cotizaciones</title>
+        <!-- Favicon-->
+        <link rel="Digitalhikeup Icon" href="../img/Logo.png" type="image/x-icon">
+        <!-- Bootstrap icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="../css/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="../scss/styles_css.css"/>
+        <meta name="description" content="Bienvenidos a Digitalhikeup | Te ayudamos a escalar tus finanzas mediante
+        el uso de machine learning">
+        <meta name="keywords" content="Digital, Data, Algoritmos, Machine Learning, Finanzas, Pymes, Finanzas personales">
+    </head>
+    <body>
+        <!-- Navigation-->
+        <nav class="navbar navbar-light bg-light static-top">
+            <div class="container">
+                <img class="logo_page" src="../img/Logo.png" alt="Logo inicio">
+                <a class="navbar-brand" href="#!">DIGITALHIKEUP | Cotizaciones</a>
+                <a id="btn_success" class="btn btn-success" href="#signup">Dejanos tu correo electronico y nos contactamos lo antes posible!</a>
+            </div>
         </nav>
-    </header>
-<h2>Cotizaciones</h2>
-<table>
-  <tr><!-- inicio de fila-->
-    <td>Plan Individual</td>
-    <td>
-    <ul>
-        <li>Te ayudamos a ordenar tus finanzas personales</li>
-        <li>Asesoramiento de inversiones en base a modelos de machine learning</li>
-    </ul>
-    </td>
-    <td>Precio: $xx</td>
-  </tr><!-- cierre de fila -->
-  <tr><!-- inicio de otra fila-->
-    <td>Plan Negocios</td>
-    <td>
-    <ul>
-        <li>Te ayudamos a ordenar tus finanzas</li>
-        <li>Asesoramiento de negocios en base a modelos de data science</li>
-        <li>Asesoramiento de Marketing Digital</li>
-    </ul>
-    </td>
-    <td>Precio: $xx</td>
-  </tr><!-- cierre de la segunda fila -->
-</table>
-<!--Boton de comenzar te llevaria a una suscripcion,  lo puse dentro de etiquetas form porque lei que dentro de estas
-se incluyen los input type buttons-->
 
-<button class="button">
-        <a href="./pages/comenzar.html"><input type="button" value="Comenzar"/></a>
-    </button>
+        <!-- Masthead-->
+        <header class="masthead">
+            <div class="container position-relative">
+                <div class="row justify-content-center">
+                    <div class="col-xl-6">
+                        <div class="text-center text-white">
+                            <!-- Page heading-->
+                            <h1 class="mb-5">Conoce los costos de nuestros servicios aqui abajo</h1>
+                            <!-- Signup form-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
 
-    <h4 class="ayuda">No sabes como? Contactanos y te ayudamos!</h4>
+        <div class="content w-100 p-3">
 
-    <nav class="slogan">
-        <ul>
-            <li>Digitalizamos negocios</li>
-            <li>Mejoramos tu planeamiento financiero</li>
-            <li>Ayudamos a invertir inteligentemente en el mercado</li>
-        </ul>
-    </nav>
+            <div class="container">
+              <h2 class="mb-5">Cotizaciones</h2>
 
-    <footer class="footer">Facebook | Instagram | Linkedin</footer>
-</body>
-=======
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Digitalhikeup | Bienvenido a la transformacion digital</title>
-    <link rel="Digitalhikeup Icon" href="./img/Logo.jpg" type="image/x-icon">
-</head>
-<body>
-    <!--Imagen principal, por arriba de esta figuraran toda el resto del body-->
-    <img src="../img/Desktop.png" alt="Digitalhikeup imagen principal"/>
-<!--La idea de esta lista es que figuren de manera horizontal-->
-    <header class="menu">
-        <nav class="navegacion">
-            <ul class="opciones">
-                <a href="../index.html"><li class="opciones_lista">Inicio</li></a>
-                <a href="acerca_de_nosotros.html"><li class="opciones_lista">Acerca de nosotros</li></a>
-                <a href="productos.html"><li class="opciones_lista">Productos</li></a>
-                <a href="cotizaciones.html"><li class="opciones_lista">Cotizaciones</li></a>
-                <a href="ayuda.html"><li class="opciones_lista">Ayuda</li></a>
-                <a href="contactanos.html"><li class="opciones_lista">Contactanos</li></a>
-             </ul>
-        </nav>
-    </header>
-<h2>Cotizaciones</h2>
-<table>
-  <tr><!-- inicio de fila-->
-    <td>Plan Individual</td>
-    <td>
-    <ul>
-        <li>Te ayudamos a ordenar tus finanzas personales</li>
-        <li>Asesoramiento de inversiones en base a modelos de machine learning</li>
-    </ul>
-    </td>
-    <td>Precio: $xx</td>
-  </tr><!-- cierre de fila -->
-  <tr><!-- inicio de otra fila-->
-    <td>Plan Negocios</td>
-    <td>
-    <ul>
-        <li>Te ayudamos a ordenar tus finanzas</li>
-        <li>Asesoramiento de negocios en base a modelos de data science</li>
-        <li>Asesoramiento de Marketing Digital</li>
-    </ul>
-    </td>
-    <td>Precio: $xx</td>
-  </tr><!-- cierre de la segunda fila -->
-</table>
-<!--Boton de comenzar te llevaria a una suscripcion,  lo puse dentro de etiquetas form porque lei que dentro de estas
-se incluyen los input type buttons-->
+              <div class="table-responsive">
 
-<button class="button">
-        <a href="./pages/comenzar.html"><input type="button" value="Comenzar"/></a>
-    </button>
+                <table class="table table-striped custom-table">
+                  <thead>
+                    <tr>
+                      <th scope="col">
+                        <!-- <label class="control control--checkbox">
+                          <input type="checkbox"  class="js-check-all"/>
+                          <div class="control__indicator"></div>
+                        </label> -->
+                      </th>
+                      <th scope="col">#</th>
+                      <th scope="col">Plan</th>
+                      <th scope="col">Servicios</th>
+                      <th scope="col">Precio</th>
+                      <th scope="col">
+                        <!-- <label class="custom-control ios-switch" style="position: relative; top: 10px;">
+                          <input type="checkbox" class="ios-switch-control-input js-ios-switch-all">
+                          <span class="ios-switch-control-indicator"></span>
+                          </label> -->
+                      </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr scope="row" class="active">
+                      <td>
+                        <label class="control control--checkbox">
+                        <input type="checkbox" />
+                        <div class="control__indicator"></div>
+                        </label>
+                      </td>
+                      <td>
+                      1
+                      </td>
+                      <td class="pl-0">
+                        <div class="d-flex align-items-center">
 
-    <h4 class="ayuda">No sabes como? Contactanos y te ayudamos!</h4>
+                          <p href="#" class="name">Plan Individual</p>
+                        </div>
+                      </td>
+                      <td>
+                        Ordenamos tus finanzas personales, con herramientas simples de usar.
+                        Asesoramos tus inversiones en base a modelos de machine learning.
 
-    <nav class="slogan">
-        <ul>
-            <li>Digitalizamos negocios</li>
-            <li>Mejoramos tu planeamiento financiero</li>
-            <li>Ayudamos a invertir inteligentemente en el mercado</li>
-        </ul>
-    </nav>
+                      </td>
+                      <td>$1.999</td>
+                      <td>
+                        <label class="custom-control ios-switch">
+                          <input type="checkbox" class="ios-switch-control-input" checked="">
+                          <span class="ios-switch-control-indicator"></span>
+                          </label>
+                      </td>
 
-    <footer class="footer">Facebook | Instagram | Linkedin</footer>
-</body>
->>>>>>> 8ff89d69c799cbdcbec321b527e30de09261a3ad
+                    </tr>
+
+                    <tr  class="active">
+
+                      <td>
+                        <label class="control control--checkbox">
+                        <input type="checkbox" />
+                        <div class="control__indicator"></div>
+                        </label>
+                      </td>
+
+                      <td>2</td>
+                      <td class="pl-0">
+                        <div class="d-flex align-items-center">
+
+
+                          <p href="#" class="name">Plan Negocio</p>
+                        </div>
+
+                      </td>
+                      <td>
+                        Optimiza tus finanzas corporativas mediante el uso de herramientas simples.
+                        Conoce cuantos son tus ingresos, tus egresos y tus margenes de ganancia reales.
+                        Te asesoramos en tu negocio en base a modelos de data science, encontrando soluciones reales para que escales como nunca antes!
+                        Estrategias de Marketing Digital y redes sociales, para que establezcas y mejores tu marca en el mercado.
+                      </td>
+                      <td>$2.999</td>
+
+                      <td>
+                        <label class="custom-control ios-switch">
+                          <input type="checkbox" class="ios-switch-control-input" checked="">
+                          <span class="ios-switch-control-indicator"></span>
+                          </label>
+                      </td>
+                         </tr>
+
+                  </tbody>
+                </table>
+              </div>
+
+
+            </div>
+
+        </div>
+        <!-- Call to Action-->
+        <section class="call-to-action text-white text-center" id="signup">
+            <div class="container position-relative">
+                <div class="row justify-content-center">
+                    <div class="col-xl-6">
+                        <h2 class="mb-4">Listo para crecer? Escala con nosotros!</h2>
+                        <!-- Signup form-->
+                        <!-- * * * * * * * * * * * * * * *-->
+                        <!-- * * SB Forms Contact Form * *-->
+                        <!-- * * * * * * * * * * * * * * *-->
+                        <!-- This form is pre-integrated with SB Forms.-->
+                        <!-- To make this form functional, sign up at-->
+                        <!-- https://startbootstrap.com/solution/contact-forms-->
+                        <!-- to get an API token!-->
+                        <!--<form class="form-subscribe" id="contactFormFooter" data-sb-form-api-token="API_TOKEN">-->
+                        <form class="form-subscribe" id="contactFormFooter" action="https://formspree.io/f/xdobkqgj" method="POST">
+
+                            <!-- Email address input-->
+                            <div class="row">
+                                <div class="col">
+                                    <input class="form-control form-control-lg" id="emailAddressBelow" type="email" placeholder="Email Address" data-sb-validations="required,email" name="_replyto"/>
+                                    <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:required" name="_replyto">Ingresa tu correo electronico</div>
+                                    <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:email" name="message">Correo electronico no valido</div>
+                                </div>
+                                <div class="col-auto"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">Ingresa</button></div>
+                            </div>
+                            <!-- Submit success message-->
+                            <!---->
+                            <!-- This is what your users will see when the form-->
+                            <!-- has successfully submitted-->
+                            <div class="d-none" id="submitSuccessMessage">
+                                <div class="text-center mb-3">
+                                    <div class="fw-bolder" name="message">Ingreso exitoso!</div>
+                                    <p>Activa tu formulario</p>
+                                </div>
+                            </div>
+                            <!-- Submit error message-->
+                            <!---->
+                            <!-- This is what your users will see when there is-->
+                            <!-- an error submitting the form-->
+                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3" name="message">Error!</div></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Footer-->
+        <footer class="footer bg-light">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
+                        <ul class="list-inline mb-2">
+                            <a href="../index.html" ><li class="list-inline-item">Inicio</li></a>
+                            <a href="acerca_de_nosotros.html" target="_blank"><li class="list-inline-item">Acerca de nosotros</li></a>
+                            <a href="cotizaciones.html" target="_blank"><li class="list-inline-item">Cotizaciones</li></a>
+                            <a href="ayuda.html" target="_blank"><li class="list-inline-item">Ayuda</li></a>
+                            <a href="contactanos.html" target="_blank"><li class="list-inline-item">Contactanos</li></a>
+
+                        </ul>
+                        <p class="text-muted small mb-4 mb-lg-0">&copy; DigitalHikeUp 2021. All Rights Reserved.</p>
+                    </div>
+                    <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
+                        <ul class="list-inline mb-0">
+                            <li class="list-inline-item me-4">
+                                <a href="#!"><i class="bi-facebook fs-3"></i></a>
+                            </li>
+                            <li class="list-inline-item me-4">
+                                <a href="#!"><i class="bi-twitter fs-3"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#!"><i class="bi-instagram fs-3"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+        <script src="js/jquery-3.3.1.min.js"></script>
+        <script src="js/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/main.js"></script>
+    </body>
 </html>
