--- a/Documents/Full Stack Dev/Web/Code/Final/Proyecto Desarrollo Web/pages/cotizaciones.html
+++ b/Documents/Full Stack Dev/Web/Code/Final/Proyecto Desarrollo Web/pages/cotizaciones.html
@@ -19,12 +19,12 @@
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-light bg-light static-top">
-            <div class="container">
-                <img class="logo_page" src="../img/Logo.png" alt="Logo inicio">
-                <a class="navbar-brand" href="#!">DIGITALHIKEUP | Cotizaciones</a>
-                <a id="btn_success" class="btn btn-success" href="#signup">Dejanos tu correo electronico y nos contactamos lo antes posible!</a>
-            </div>
-        </nav>
+          <div class="container">
+              <img class="img-fluid rounded mx-auto d-block" alt="Responsive image" src="../img/Logo.png">
+              <a class="navbar-brand lead mb-0" href="#!">DIGITALHIKEUP | Disrumpiendo tus negocios y tus finanzas personales</a>
+              <a id="btn_success" class="btn btn-success rounded mx-auto d-block" href="#signup">Sumate!</a>
+          </div>
+      </nav>
 
         <!-- Masthead-->
         <header class="masthead">
@@ -33,7 +33,7 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">Conoce los costos de nuestros servicios aqui abajo</h1>
+                            <h1 class="mb-5 lead mb-0">Conoce los costos de nuestros servicios aqui abajo</h1>
                             <!-- Signup form-->
                         </div>
                     </div>
@@ -44,7 +44,7 @@
         <div class="content w-100 p-3">
 
             <div class="container">
-              <h2 class="mb-5">Cotizaciones</h2>
+              <h2 class="mb-5 lead mb-0">Cotizaciones</h2>
 
               <div class="table-responsive">
 
@@ -86,12 +86,12 @@
                           <p href="#" class="name">Plan Individual</p>
                         </div>
                       </td>
-                      <td>
+                      <td lead mb-0>
                         Ordenamos tus finanzas personales, con herramientas simples de usar.
                         Asesoramos tus inversiones en base a modelos de machine learning.
 
                       </td>
-                      <td>$1.999</td>
+                      <td lead mb-0>$1.999</td>
                       <td>
                         <label class="custom-control ios-switch">
                           <input type="checkbox" class="ios-switch-control-input" checked="">
@@ -119,13 +119,13 @@
                         </div>
 
                       </td>
-                      <td>
+                      <td lead mb-0>
                         Optimiza tus finanzas corporativas mediante el uso de herramientas simples.
                         Conoce cuantos son tus ingresos, tus egresos y tus margenes de ganancia reales.
                         Te asesoramos en tu negocio en base a modelos de data science, encontrando soluciones reales para que escales como nunca antes!
                         Estrategias de Marketing Digital y redes sociales, para que establezcas y mejores tu marca en el mercado.
                       </td>
-                      <td>$2.999</td>
+                      <td lead mb-0>$2.999</td>
 
                       <td>
                         <label class="custom-control ios-switch">
