--- a/Documents/Full Stack Dev/Web/Code/Final/Proyecto Desarrollo Web/index.html
+++ b/Documents/Full Stack Dev/Web/Code/Final/Proyecto Desarrollo Web/index.html
@@ -20,9 +20,9 @@
         <!-- Navigation-->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <img class="logo_page" src="./img/Logo.png" alt="Logo inicio">
-                <a class="navbar-brand" href="#!">DIGITALHIKEUP | Disrumpiendo tus negocios y tus finanzas personales</a>
-                <a id="btn_success" class="btn btn-success" href="#signup">Sumate!</a>
+                <img class="img-fluid rounded mx-auto d-block" alt="Responsive image" src="./img/Logo.png">
+                <a class="navbar-brand lead mb-0" href="#!">DIGITALHIKEUP | Disrumpiendo tus negocios y tus finanzas personales</a>
+                <a id="btn_success" class="btn btn-success rounded mx-auto d-block" href="#signup">Sumate!</a>
             </div>
         </nav>
 
