--- a/Documents/Full Stack Dev/Web/Code/Final/Proyecto Desarrollo Web/index.html
+++ b/Documents/Full Stack Dev/Web/Code/Final/Proyecto Desarrollo Web/index.html
@@ -19,9 +19,9 @@
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-light bg-light static-top">
-            <div class="container">
+            <div class="container collapse navbar-collapse" id="navbarSupportedContent">
                 <img class="img-fluid rounded mx-auto d-block" alt="Responsive image" src="./img/Logo.png">
-                <a class="navbar-brand lead mb-0" href="#!">DIGITALHIKEUP | Disrumpiendo tus negocios y tus finanzas personales</a>
+                <span class="navbar-text mb-0 h3 text-center" id="title">DIGITALHIKEUP | Disrumpiendo tus negocios y tus finanzas personales</span>
                 <a id="btn_success" class="btn btn-success rounded mx-auto d-block" href="#signup">Sumate!</a>
             </div>
         </nav>
