--- a/Documents/Full Stack Dev/Web/Code/Final/Proyecto Desarrollo Web/pages/cotizaciones.html
+++ b/Documents/Full Stack Dev/Web/Code/Final/Proyecto Desarrollo Web/pages/cotizaciones.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-light bg-light static-top">
           <div class="container">
               <img class="img-fluid rounded mx-auto d-block" alt="Responsive image" src="../img/Logo.png">
-              <a class="navbar-brand lead mb-0" href="#!">DIGITALHIKEUP | Disrumpiendo tus negocios y tus finanzas personales</a>
+              <span class="navbar-text mb-0 h3 text-center" id="title">DIGITALHIKEUP | Disrumpiendo tus negocios y tus finanzas personales</span>
               <a id="btn_success" class="btn btn-success rounded mx-auto d-block" href="#signup">Sumate!</a>
           </div>
       </nav>
@@ -41,107 +41,29 @@
             </div>
         </header>
 
-        <div class="content w-100 p-3">
-
-            <div class="container">
-              <h2 class="mb-5 lead mb-0">Cotizaciones</h2>
-
-              <div class="table-responsive">
-
-                <table class="table table-striped custom-table">
-                  <thead>
-                    <tr>
-                      <th scope="col">
-                        <!-- <label class="control control--checkbox">
-                          <input type="checkbox"  class="js-check-all"/>
-                          <div class="control__indicator"></div>
-                        </label> -->
-                      </th>
-                      <th scope="col">#</th>
-                      <th scope="col">Plan</th>
-                      <th scope="col">Servicios</th>
-                      <th scope="col">Precio</th>
-                      <th scope="col">
-                        <!-- <label class="custom-control ios-switch" style="position: relative; top: 10px;">
-                          <input type="checkbox" class="ios-switch-control-input js-ios-switch-all">
-                          <span class="ios-switch-control-indicator"></span>
-                          </label> -->
-                      </th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr scope="row" class="active">
-                      <td>
-                        <label class="control control--checkbox">
-                        <input type="checkbox" />
-                        <div class="control__indicator"></div>
-                        </label>
-                      </td>
-                      <td>
-                      1
-                      </td>
-                      <td class="pl-0">
-                        <div class="d-flex align-items-center">
-
-                          <p href="#" class="name">Plan Individual</p>
-                        </div>
-                      </td>
-                      <td lead mb-0>
-                        Ordenamos tus finanzas personales, con herramientas simples de usar.
-                        Asesoramos tus inversiones en base a modelos de machine learning.
-
-                      </td>
-                      <td lead mb-0>$1.999</td>
-                      <td>
-                        <label class="custom-control ios-switch">
-                          <input type="checkbox" class="ios-switch-control-input" checked="">
-                          <span class="ios-switch-control-indicator"></span>
-                          </label>
-                      </td>
-
-                    </tr>
-
-                    <tr  class="active">
-
-                      <td>
-                        <label class="control control--checkbox">
-                        <input type="checkbox" />
-                        <div class="control__indicator"></div>
-                        </label>
-                      </td>
-
-                      <td>2</td>
-                      <td class="pl-0">
-                        <div class="d-flex align-items-center">
-
-
-                          <p href="#" class="name">Plan Negocio</p>
-                        </div>
-
-                      </td>
-                      <td lead mb-0>
-                        Optimiza tus finanzas corporativas mediante el uso de herramientas simples.
-                        Conoce cuantos son tus ingresos, tus egresos y tus margenes de ganancia reales.
-                        Te asesoramos en tu negocio en base a modelos de data science, encontrando soluciones reales para que escales como nunca antes!
-                        Estrategias de Marketing Digital y redes sociales, para que establezcas y mejores tu marca en el mercado.
-                      </td>
-                      <td lead mb-0>$2.999</td>
-
-                      <td>
-                        <label class="custom-control ios-switch">
-                          <input type="checkbox" class="ios-switch-control-input" checked="">
-                          <span class="ios-switch-control-indicator"></span>
-                          </label>
-                      </td>
-                         </tr>
-
-                  </tbody>
-                </table>
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Plan Individual</h5>
+                <p class="card-text">Ordenamos tus finanzas personales, con herramientas simples de usar.
+                  Asesoramos tus inversiones en base a modelos de machine learning.</p>
+                <span href="#" class="btn btn-primary">$1.999</span>
               </div>
-
-
             </div>
-
+          </div>
+          <div class="col-sm-6">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Plan Negocio</h5>
+                <p class="card-text">Optimiza tus finanzas corporativas mediante el uso de herramientas simples.
+                  Conoce cuantos son tus ingresos, tus egresos y tus margenes de ganancia reales.
+                  Te asesoramos en tu negocio en base a modelos de data science, encontrando soluciones reales para que escales como nunca antes!
+                  Estrategias de Marketing Digital y redes sociales, para que establezcas y mejores tu marca en el mercado.</p>
+                <span href="#" class="btn btn-primary">$2.999</span>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- Call to Action-->
         <section class="call-to-action text-white text-center" id="signup">
